# start_to_build_robot

./: .gitignore  README.md
opencv/: CMakeLists.txt  README.md  lesson0.cpp  lesson1.cpp  lesson2.cpp
